--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -7,4 +7,4 @@ body {
 	box-shadow: none;
 }
 
-.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+.nav, .pagination, .carousel, .panel-title, a { cursor: pointer; }
